if(NOT CTEST_TESTING_TIMEOUT)
    set(CTEST_TESTING_TIMEOUT 60)
endif()

macro(TEST_QT_MODULE var name)
  if(NOT DISABLE_${name} AND ${var})
      add_subdirectory(${name})
  endif()
endmacro(TEST_QT_MODULE)

macro(PYSIDE_TEST)
    string(REGEX MATCH "/([^/]+)//?([^/]+)\\.py" foo "${CMAKE_CURRENT_SOURCE_DIR}/${ARGV0}" )
    set(TEST_NAME "${CMAKE_MATCH_1}_${CMAKE_MATCH_2}")
    if (${ARGC} EQUAL 1)
        set(EXPECT_TO_FAIL 0)
    elseif(${ARGC} EQUAL 2)
        set(EXPECT_TO_FAIL ${ARGV1})
    else()
        message(WARNING "Ivalid call of macro PYSIDE_TEST")
    endif()
    set(TEST_CMD ${CMAKE_SOURCE_DIR}/tests/run_test.sh  ${libpyside_BINARY_DIR} "${CMAKE_BINARY_DIR}:${CMAKE_SOURCE_DIR}/tests/util" ${PYTHON_EXECUTABLE} "${CMAKE_CURRENT_SOURCE_DIR}/${ARGV0}")
    add_test(${TEST_NAME} ${TEST_CMD})
    set_tests_properties(${TEST_NAME} PROPERTIES
                         TIMEOUT ${CTEST_TESTING_TIMEOUT}
                         WILL_FAIL ${EXPECT_TO_FAIL})
endmacro(PYSIDE_TEST)


add_subdirectory(signals)
TEST_QT_MODULE(QT_QTCORE_FOUND QtCore)
TEST_QT_MODULE(QT_QTGUI_FOUND QtGui)
TEST_QT_MODULE(QT_QTNETWORK_FOUND QtNetwork)
TEST_QT_MODULE(QT_QTWEBKIT_FOUND QtWebKit)
TEST_QT_MODULE(QT_QTSVG_FOUND QtSvg)
TEST_QT_MODULE(QT_QTXML_FOUND QtXml)
TEST_QT_MODULE(QT_QTTEST_FOUND QtTest)
TEST_QT_MODULE(QT_QTOPENGL_FOUND QtOpenGL)
TEST_QT_MODULE(QT_QTSQL_FOUND QtSql)
TEST_QT_MODULE(QT_QTUITOOLS_FOUND QtUiTools)
TEST_QT_MODULE(QT_QTHELP_FOUND QtHelp)
TEST_QT_MODULE(QT_QTXMLPATTERNS_FOUND QtXmlPatterns)
TEST_QT_MODULE(QT_QTMAEMO5_FOUND QtMaemo5)
TEST_QT_MODULE(QT_QTSCRIPT_FOUND QtScript)
TEST_QT_MODULE(QT_QTSCRIPTTOOLS_FOUND QtScriptTools)
TEST_QT_MODULE(QT_QTMULTIMEDIA_FOUND QtMultimedia)
TEST_QT_MODULE(QT_PHONON_FOUND phonon)
TEST_QT_MODULE(QT_QTDECLARATIVE_FOUND QtDeclarative)
